--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,10 +5,12 @@
     </div>
     <div class="box">
         <% for (var i = 0;i<newlistitem.length;i++){ %>
+            <form action="/delete" method="post">
             <div class="item">
-                <input type="checkbox">
-                <p><%= newlistitem[i]%></p>
+                <input type="checkbox" name="checkboxx" value="<%=newlistitem[i]._id %>" onChange="this.form.submit()">
+                <p><%= newlistitem[i].name%></p>
             </div>
+            </form>
         <% } %>
         <form action="/" method="post"class="item">
             <input type="text" name="newitem" placeholder="Add Item">
@@ -17,3 +19,4 @@
         </div>
 
 <%- include("footer") %>
+ 
