--- a/views/header.ejs
+++ b/views/header.ejs
@@ -5,4 +5,4 @@
     <title>ToDO list</title>
 </head>
 <body>
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="public/css/styles.css">
